# politsim2018

./: .gitignore  .gitmodules  GameDesign.md  Sources.txt  Zahlen.ods  map.json
sim/: CMakeLists.txt  SConstruct  default.nix  demo.cpp  godot-api.json
sim/demo/: demo.cpp
sim/src/: interface.cpp  interface.h  simple.cpp  world.cpp  world.hpp
sim/src/game/: actor.cpp  actor.hpp  event.cpp  event.hpp  map.cpp  map.hpp  world.cpp  world.hpp
sim/src/utils/: random.hpp  time.hpp  vector.hpp
ui/: default_bus_layout.tres  map.json  project.godot  tilemap_light.shader
ui/assets/citizen/: citizen1.tres  citizen2.tres
ui/assets/gui/: font.tres  theme.tres
ui/assets/gui/button/: normal.tres  pressed.tres
ui/assets/tiles/: industrie.tres
ui/lib/: politsim.gdnlib  politsim.gdns
ui/scenes/: Main.gd  Main.tscn  bottom_ui.gd  bottom_ui.tscn  button.gd  citizen.tscn  citizen2.tscn  cursor.gd  day_counter.gd  global.gd  indicator.gd  main.gd  main.tscn  money.gd  politicbar.gd  status_ui.tscn  tiles.gd  tombstone.gd  tombstone.tscn  ui.tscn
